// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VTimelineItem.js should have a custom icon 1`] = `

<li class="timeline__item">
  <div class="timeline__line grey--text text--lighten-2"
       style="width: 8px; margin-left: -0.66em;"
  >
  </div>
  <div class="timeline__item--head white grey--text text--lighten-2">
    <div class="timeline__icon white grey--text text--lighten-2"
         style="box-shadow: currentColor 0px 0px 0px 8px;"
    >
      <i aria-hidden="true"
         class="icon material-icons"
         style="font-size: 24px;"
      >
        list
      </i>
    </div>
  </div>
  <div class="timeline__item--body__container">
    <div class="timeline__item--body">
    </div>
  </div>
</li>

`;

exports[`VTimelineItem.js should have a custom icon size 1`] = `

<li class="timeline__item">
  <div class="timeline__line grey--text text--lighten-2"
       style="width: 8px; margin-left: -0.66em;"
  >
  </div>
  <div class="timeline__item--head white grey--text text--lighten-2">
    <div class="timeline__icon white grey--text text--lighten-2"
         style="box-shadow: currentColor 0px 0px 0px 8px;"
    >
      <i aria-hidden="true"
         class="icon material-icons"
         style="font-size: 48px;"
      >
        event
      </i>
    </div>
  </div>
  <div class="timeline__item--body__container">
    <div class="timeline__item--body">
    </div>
  </div>
</li>

`;

exports[`VTimelineItem.js should have a custom icon without interference from parent 1`] = `

<li class="timeline__item">
  <div class="timeline__line grey--text text--lighten-2"
       style="width: 8px; margin-left: -0.66em;"
  >
  </div>
  <div class="timeline__item--head white grey--text text--lighten-2">
    <div class="timeline__icon white grey--text text--lighten-2"
         style="box-shadow: currentColor 0px 0px 0px 8px;"
    >
      <i aria-hidden="true"
         class="icon material-icons"
         style="font-size: 24px;"
      >
        list
      </i>
    </div>
  </div>
  <div class="timeline__item--body__container">
    <div class="timeline__item--body">
    </div>
  </div>
</li>

`;

exports[`VTimelineItem.js should have a custom size without interference from parent 1`] = `

<li class="timeline__item">
  <div class="timeline__line grey--text text--lighten-2"
       style="width: 8px; margin-left: -0.66em;"
  >
  </div>
  <div class="timeline__item--head white grey--text text--lighten-2">
    <div class="timeline__icon white grey--text text--lighten-2"
         style="box-shadow: currentColor 0px 0px 0px 8px;"
    >
      <i aria-hidden="true"
         class="icon material-icons"
         style="font-size: 58px;"
      >
        event
      </i>
    </div>
  </div>
  <div class="timeline__item--body__container">
    <div class="timeline__item--body">
    </div>
  </div>
</li>

`;

exports[`VTimelineItem.js should have a cutom line color 1`] = `

<li class="timeline__item">
  <div class="timeline__line red--text text--lighten-1"
       style="width: 8px; margin-left: -0.66em;"
  >
  </div>
  <div class="timeline__item--head white grey--text text--lighten-2">
    <div class="timeline__icon white grey--text text--lighten-2"
         style="box-shadow: currentColor 0px 0px 0px 8px;"
    >
      <i aria-hidden="true"
         class="icon material-icons"
         style="font-size: 24px;"
      >
        event
      </i>
    </div>
  </div>
  <div class="timeline__item--body__container">
    <div class="timeline__item--body">
    </div>
  </div>
</li>

`;

exports[`VTimelineItem.js should have a cutom line color without parent interference 1`] = `

<li class="timeline__item">
  <div class="timeline__line red--text text--lighten-1"
       style="width: 8px; margin-left: -0.66em;"
  >
  </div>
  <div class="timeline__item--head white grey--text text--lighten-2">
    <div class="timeline__icon white grey--text text--lighten-2"
         style="box-shadow: currentColor 0px 0px 0px 8px;"
    >
      <i aria-hidden="true"
         class="icon material-icons"
         style="font-size: 24px;"
      >
        event
      </i>
    </div>
  </div>
  <div class="timeline__item--body__container">
    <div class="timeline__item--body">
    </div>
  </div>
</li>

`;

exports[`VTimelineItem.js should have a no icon 1`] = `

<li class="timeline__item">
  <div class="timeline__line grey--text text--lighten-2"
       style="width: 8px; margin-left: -0.66em;"
  >
  </div>
  <div class="timeline__item--head white grey--text text--lighten-2">
    <div class="timeline__icon white grey--text text--lighten-2"
         style="box-shadow: currentColor 0px 0px 0px 8px;"
    >
      <i aria-hidden="true"
         class="icon material-icons"
         style="font-size: 24px;"
      >
        event
      </i>
    </div>
  </div>
  <div class="timeline__item--body__container">
    <div class="timeline__item--body">
    </div>
  </div>
</li>

`;

exports[`VTimelineItem.js should have a no icon without parent interference 1`] = `

<li class="timeline__item">
  <div class="timeline__line grey--text text--lighten-2"
       style="width: 8px; margin-left: -0.66em;"
  >
  </div>
  <div class="timeline__item--head white grey--text text--lighten-2">
    <div class="timeline__icon white grey--text text--lighten-2"
         style="box-shadow: currentColor 0px 0px 0px 8px;"
    >
      <i aria-hidden="true"
         class="icon material-icons"
         style="font-size: 24px;"
      >
        event
      </i>
    </div>
  </div>
  <div class="timeline__item--body__container">
    <div class="timeline__item--body">
    </div>
  </div>
</li>

`;

exports[`VTimelineItem.js should have cutom circle fill color 1`] = `

<li class="timeline__item">
  <div class="timeline__line grey--text text--lighten-2"
       style="width: 8px; margin-left: -0.66em;"
  >
  </div>
  <div class="timeline__item--head red grey--text text--lighten-2">
    <div class="timeline__icon red grey--text text--lighten-2"
         style="box-shadow: currentColor 0px 0px 0px 8px;"
    >
      <i aria-hidden="true"
         class="icon material-icons"
         style="font-size: 24px;"
      >
        event
      </i>
    </div>
  </div>
  <div class="timeline__item--body__container">
    <div class="timeline__item--body">
    </div>
  </div>
</li>

`;

exports[`VTimelineItem.js should have cutom circle fill color without parent interference 1`] = `

<li class="timeline__item">
  <div class="timeline__line grey--text text--lighten-2"
       style="width: 8px; margin-left: -0.66em;"
  >
  </div>
  <div class="timeline__item--head red grey--text text--lighten-2">
    <div class="timeline__icon red grey--text text--lighten-2"
         style="box-shadow: currentColor 0px 0px 0px 8px;"
    >
      <i aria-hidden="true"
         class="icon material-icons"
         style="font-size: 24px;"
      >
        event
      </i>
    </div>
  </div>
  <div class="timeline__item--body__container">
    <div class="timeline__item--body">
    </div>
  </div>
</li>

`;

exports[`VTimelineItem.js should have cutom circle outline color 1`] = `

<li class="timeline__item">
  <div class="timeline__line grey--text text--lighten-2"
       style="width: 8px; margin-left: -0.66em;"
  >
  </div>
  <div class="timeline__item--head white red--text">
    <div class="timeline__icon white red--text"
         style="box-shadow: currentColor 0px 0px 0px 8px;"
    >
      <i aria-hidden="true"
         class="icon material-icons"
         style="font-size: 24px;"
      >
        event
      </i>
    </div>
  </div>
  <div class="timeline__item--body__container">
    <div class="timeline__item--body">
    </div>
  </div>
</li>

`;

exports[`VTimelineItem.js should have cutom circle outline color without parent interference 1`] = `

<li class="timeline__item">
  <div class="timeline__line grey--text text--lighten-2"
       style="width: 8px; margin-left: -0.66em;"
  >
  </div>
  <div class="timeline__item--head white red--text">
    <div class="timeline__icon white red--text"
         style="box-shadow: currentColor 0px 0px 0px 8px;"
    >
      <i aria-hidden="true"
         class="icon material-icons"
         style="font-size: 24px;"
      >
        event
      </i>
    </div>
  </div>
  <div class="timeline__item--body__container">
    <div class="timeline__item--body">
    </div>
  </div>
</li>

`;

exports[`VTimelineItem.js should hide circle outline 1`] = `

<li class="timeline__item">
  <div class="timeline__line grey--text text--lighten-2"
       style="width: 8px; margin-left: -0.66em;"
  >
  </div>
  <div class="timeline__item--head white grey--text text--lighten-2">
    <div class="timeline__icon white grey--text text--lighten-2"
         style="box-shadow: none;"
    >
      <i aria-hidden="true"
         class="icon material-icons"
         style="font-size: 24px;"
      >
        event
      </i>
    </div>
  </div>
  <div class="timeline__item--body__container">
    <div class="timeline__item--body">
    </div>
  </div>
</li>

`;

exports[`VTimelineItem.js should hide circle outline without parent interference 1`] = `

<li class="timeline__item">
  <div class="timeline__line grey--text text--lighten-2"
       style="width: 8px; margin-left: -0.66em;"
  >
  </div>
  <div class="timeline__item--head white grey--text text--lighten-2">
    <div class="timeline__icon white grey--text text--lighten-2"
         style="box-shadow: none;"
    >
      <i aria-hidden="true"
         class="icon material-icons"
         style="font-size: 24px;"
      >
        event
      </i>
    </div>
  </div>
  <div class="timeline__item--body__container">
    <div class="timeline__item--body">
    </div>
  </div>
</li>

`;

exports[`VTimelineItem.js should render timeline body with timeline--hover class when hover prop 1`] = `

<li class="timeline__item">
  <div class="timeline__line grey--text text--lighten-2"
       style="width: 8px; margin-left: -0.66em;"
  >
  </div>
  <div class="timeline__item--head white grey--text text--lighten-2">
    <div class="timeline__icon white grey--text text--lighten-2"
         style="box-shadow: currentColor 0px 0px 0px 8px;"
    >
      <i aria-hidden="true"
         class="icon material-icons"
         style="font-size: 24px;"
      >
        event
      </i>
    </div>
  </div>
  <div class="timeline__item--body__container">
    <div class="timeline__item--body timeline--hover">
    </div>
  </div>
</li>

`;

exports[`VTimelineItem.js should render timeline body with timeline--raised class when raised prop 1`] = `

<li class="timeline__item">
  <div class="timeline__line grey--text text--lighten-2"
       style="width: 8px; margin-left: -0.66em;"
  >
  </div>
  <div class="timeline__item--head white grey--text text--lighten-2">
    <div class="timeline__icon white grey--text text--lighten-2"
         style="box-shadow: currentColor 0px 0px 0px 8px;"
    >
      <i aria-hidden="true"
         class="icon material-icons"
         style="font-size: 24px;"
      >
        event
      </i>
    </div>
  </div>
  <div class="timeline__item--body__container">
    <div class="timeline__item--body timeline--raised">
    </div>
  </div>
</li>

`;
